--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,24 @@
 
     <dependencies>
 
+         <!--        TODO-->
+                 <dependency>
+                     <groupId>org.testcontainers</groupId>
+                     <artifactId>testcontainers</artifactId>
+                     <version>1.16.2</version>
+                 </dependency>
+                 <dependency>
+                     <groupId>org.testcontainers</groupId>
+                     <artifactId>postgresql</artifactId>
+                     <version>1.16.2</version>
+                 </dependency>
+                 <dependency>
+                     <groupId>net.java.dev.jna</groupId>
+                     <artifactId>jna</artifactId>
+                     <version>5.9.0</version>
+                     <!-- endregion Tests -->
+                 </dependency>
+
         <!-- region Spring Boot Starters -->
 
         <dependency>
