--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
         <guava.version>31.1-jre</guava.version>
         <springdoc.version>1.6.14</springdoc.version>
         <jupiter-tools.version>0.4</jupiter-tools.version>
+        <org.springframework.security.oauth.boot.spring-security-oauth2-autoconfigure.version>2.1.3.RELEASE
+        </org.springframework.security.oauth.boot.spring-security-oauth2-autoconfigure.version>
     </properties>
 
     <dependencies>
@@ -54,6 +56,11 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
@@ -67,6 +74,17 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>${org.springframework.security.oauth.boot.spring-security-oauth2-autoconfigure.version}</version>
+        </dependency>
+
         <!-- endregion -->
 
         <!-- region Database -->
@@ -75,6 +93,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
         </dependency>
 
         <!-- endregion -->
