--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,25 +3,29 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.database=POSTGRESQL
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://127.0.0.1:5432/postgres?createDatabaseIfNotExists=true}
-spring.datasource.username=${DATASOURCE_USERNAME:postgres}
-spring.datasource.password=${DATASOURCE_PASSWORD:password}
+spring.datasource.url=${DATASOURCE_URL:}
+spring.datasource.username=${DATASOURCE_USERNAME:}
+spring.datasource.password=${DATASOURCE_PASSWORD:}
 
 server.port=${APP_PORT:8080}
 
 # Mail Configuration
-spring.mail.host=${SPRING_MAIL_HOST:smtp.mail.ru}
-spring.mail.port=${SPRING_MAIL_PORT:587}
-spring.mail.username=${SPRING_MAIL_USERNAME:vadimvetrov2015@mail.ru}
-spring.mail.password=${SPRING_MAIL_PASSWORD:NyyfwHbtAcWKzJrR0eci}
+spring.mail.host=${SPRING_MAIL_HOST:}
+spring.mail.port=${SPRING_MAIL_PORT:}
+spring.mail.username=${SPRING_MAIL_USERNAME:}
+spring.mail.password=${SPRING_MAIL_PASSWORD:}
 spring.mail.properties.mail.smtp.auth=${SPRING_MAIL_SMTP_AUTH:true}
 spring.mail.properties.mail.smtp.starttls.enable=${SPRING_MAIL_STARTTLS_ENABLE:true}
 spring.mail.default-encoding=${SPRING_MAIL_ENCODING:UTF-8}
 
 # OAuth2 client configuration
-oauth2.client.clientSecret=${CLIENT_SECRET_WEB:client-web}
+oauth2.client.web.clientSecret=${CLIENT_SECRET_WEB:}
+oauth2.client.android.clientSecret=${CLIENT_SECRET_ANDROID:}
+
+# OAuth2 token configuration
+oauth2.token.reuse-refresh-token=false
 
 # Spring flyway
 spring.flyway.enabled=true
