--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=${DATASOURCE_URL:}
-spring.datasource.username=${DATASOURCE_USERNAME:}
-spring.datasource.password=${DATASOURCE_PASSWORD:}
+spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://127.0.0.1:5432/postgres?createDatabaseIfNotExists=true}
+spring.datasource.username=${DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${DATASOURCE_PASSWORD:password}
 
 server.port=${APP_PORT:8080}
 
