--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
             <version>${guava.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+            <version>2.21.1</version>
+        </dependency>
+
         <!-- endregion -->
 
         <!-- region Code Generation -->
