--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,5 @@ oauth2.token.reuse-refresh-token=false
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+
+spring.jpa.properties.hibernate.metadata_builder_contributor=org.apatrios.config.SqlContainsFunction
