--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <guava.version>31.1-jre</guava.version>
         <springdoc.version>1.6.14</springdoc.version>
         <jupiter-tools.version>0.4</jupiter-tools.version>
+        <spring-cloud.version>2021.0.3</spring-cloud.version>
         <org.springframework.security.oauth.boot.spring-security-oauth2-autoconfigure.version>2.1.3.RELEASE
         </org.springframework.security.oauth.boot.spring-security-oauth2-autoconfigure.version>
         <flyway.version>7.15.0</flyway.version>
@@ -54,6 +55,11 @@
                  </dependency>
 
         <!-- region Spring Boot Starters -->
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -100,6 +106,15 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
             <version>${flyway.version}</version>
+        </dependency>
+
+        <!-- endregion -->
+
+        <!-- retry -->
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
         </dependency>
 
         <!-- endregion -->
@@ -206,6 +221,18 @@
         <!-- endregion -->
 
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
