--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.default_schema=public
 spring.jpa.database=POSTGRESQL
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=${DATASOURCE_URL:jdbc:postgresql://127.0.0.1:5432/postgres?createDatabaseIfNotExists=true}
 spring.datasource.username=${DATASOURCE_USERNAME:postgres}
@@ -33,3 +33,10 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 
 spring.jpa.properties.hibernate.metadata_builder_contributor=org.apatrios.config.SqlContainsFunction
+
+# yookassa
+yookassa.url=https://api.yookassa.ru/v3
+yookassa.auth.type=${YOOKASSA_AUTH_TYPE:basic}
+yookassa.token=${YOOKASSA_TOKEN:}
+yookassa.shop-id=${YOOKASSA_SHOP_ID:}
+yookassa.secret-key=${YOOKASSA_SECRET_KEY:}
