--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,12 @@
             <version>2.21.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.seancfoley</groupId>
+            <artifactId>ipaddress</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <!-- endregion -->
 
         <!-- region Code Generation -->
