--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,25 +10,44 @@ services:
       DATASOURCE_URL: jdbc:postgresql://db/postgres?createDatabaseIfNotExists=true
       DATASOURCE_USERNAME: postgres
       DATASOURCE_PASSWORD: password
+
+      MINIO_ENDPOINT: http://minio:9000
+      MINIO_ACCESS_KEY: admin
+      MINIO_SECRET_KEY: password123
+      MINIO_BUCKET: velochka-bucket
+
+      MINIO_PUBLIC_URL: http://localhost:9000/velochka-bucket
+
+      LEGAL_OFFER_PATH: legal/offer.pdf
+      LEGAL_OPD_PATH: legal/opd.pdf
     depends_on:
       - db
-    command: bash -c "/apps/wait-for-service.sh db 5432 && /apps/entrypoint.sh"
+      - minio
+    command: bash -c "/apps/wait-for-service.sh db 5432 && /apps/wait-for-service.sh minio 9000 && /apps/entrypoint.sh"
+
+  minio:
+    image: minio/minio:RELEASE.2025-09-07T16-13-09Z
+    container_name: minio-storage
+    ports:
+      - "9000:9000" # API
+      - "9001:9001" # Консоль
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password123
+    command: server /data --console-address ":9001"
+    volumes:
+      - minio-data:/data
 
   db:
     image: postgres
+    container_name: postgres-db
     restart: always
     environment:
       POSTGRES_PASSWORD: password
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
     ports:
       - 5432:5432
-#
-#    image: mysql:8.0.23
-#    environment:
-#      MYSQL_ROOT_PASSWORD: "root"
-#    ports:
-#      - 3306:3306
-#    volumes:
-#      - mysql-data:/var/lib/mysql
 
 volumes:
-  mysql-data:
+  minio-data:
