--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,16 @@
 
         <!-- endregion -->
 
+        <!-- region Object Storage -->
+
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
+
+        <!-- endregion -->
+
         <!-- region Database -->
 
         <dependency>
@@ -174,6 +184,13 @@
             <groupId>com.github.seancfoley</groupId>
             <artifactId>ipaddress</artifactId>
             <version>2.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.10.1</version>
+            <scope>compile</scope>
         </dependency>
 
         <!-- endregion -->
