--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,31 @@ spring.flyway.baseline-on-migrate=true
 
 spring.jpa.properties.hibernate.metadata_builder_contributor=org.apatrios.config.SqlContainsFunction
 
+# Telegram Gateway
+telegram.gateway.token=
+
+# Flash Call
+redsms.login=
+redsms.api-key=
+
 # yookassa
 yookassa.url=https://api.yookassa.ru/v3
 yookassa.auth.type=${YOOKASSA_AUTH_TYPE:basic}
 yookassa.token=${YOOKASSA_TOKEN:}
 yookassa.shop-id=${YOOKASSA_SHOP_ID:}
 yookassa.secret-key=${YOOKASSA_SECRET_KEY:}
+
+# --- MinIO Configuration ---
+minio.endpoint=${MINIO_ENDPOINT:http://127.0.0.1:9000}
+minio.access-key=${MINIO_ACCESS_KEY:}
+minio.secret-key=${MINIO_SECRET_KEY:}
+minio.bucket-name=${MINIO_BUCKET:}
+
+minio.public-url=${MINIO_PUBLIC_URL:http://localhost:9000}
+
+legal.documents.offer.path=${LEGAL_OFFER_PATH:legal/offer.pdf}
+legal.documents.opd.path=${LEGAL_OPD_PATH:legal/opd.pdf}
+
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:5MB}
+spring.servlet.multipart.enabled=true
