--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,16 +49,15 @@ yookassa.shop-id=${YOOKASSA_SHOP_ID:}
 yookassa.secret-key=${YOOKASSA_SECRET_KEY:}
 
 # --- MinIO Configuration ---
-minio.endpoint=${MINIO_ENDPOINT:http://127.0.0.1:9000}
+minio.endpoint=${MINIO_ENDPOINT:http://localhost:9000}
 minio.access-key=${MINIO_ACCESS_KEY:}
 minio.secret-key=${MINIO_SECRET_KEY:}
 minio.bucket-name=${MINIO_BUCKET:}
 
 minio.public-url=${MINIO_PUBLIC_URL:http://localhost:9000}
 
-legal.documents.offer.path=${LEGAL_OFFER_PATH:legal/offer.pdf}
-legal.documents.opd.path=${LEGAL_OPD_PATH:legal/opd.pdf}
+legal.documents.offerPath=${LEGAL_OFFER_PATH:legal/offer.pdf}
+legal.documents.opdPath=${LEGAL_OPD_PATH:legal/opd.pdf}
 
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:5MB}
-spring.servlet.multipart.enabled=true
