--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,8 +57,9 @@ minio.bucket-name=${MINIO_BUCKET:}
 
 minio.public-url=${MINIO_PUBLIC_URL:http://localhost:9000}
 
-legal.documents.offerPath=${LEGAL_OFFER_PATH:legal/offer.pdf}
-legal.documents.opdPath=${LEGAL_OPD_PATH:legal/opd.pdf}
+documents.offerPath=${OFFER_PATH:legal/offer.pdf}
+documents.opdPath=${OPD_PATH:legal/opd.pdf}
+documents.docFolder=${DOC_FOLDER:documents}
 
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:5MB}
