Небольшие изменения в док контроллере

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,6 +60,7 @@ minio.public-url=${MINIO_PUBLIC_URL:http://localhost:9000}
 documents.offerPath=${OFFER_PATH:legal/offer.pdf}
 documents.opdPath=${OPD_PATH:legal/opd.pdf}
 documents.docFolder=${DOC_FOLDER:documents}
+documents.avatarFolder=${AVATAR_FOLDER:avatars}
 
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE:5MB}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE:5MB}
